--- a/HW2_The_Perceptron.ipynb
+++ b/HW2_The_Perceptron.ipynb
@@ -1144,7 +1144,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1158,7 +1158,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "36bc37bc93a9014bdcac28c08992a8d7dbe0e9f3603d45365e2fc81bac4744b2"
+   }
   }
  },
  "nbformat": 4,
